# sift

./: .gitignore  LICENSE  README.md  netlify.toml
.github/workflows/: ci.yml
cli/: pyproject.toml
cli/sift_search/: __init__.py  __main__.py  chunker.py  cli.py  doctor.py  embedder.py  indexer.py
cli/tests/: test_chunker.py  test_smoke.py
demo/: acx.html  compare.html  index.html  package-lock.json  package.json  privacy.html  vite.config.js
demo/public/: _headers  sift-index.db
demo/src/: embed-worker.js  main.js
docs/: fastapi-comparison.md  guide.md
runtime/: package.json
runtime/src/: embed-worker.js  index.js
test-docs/: api-reference.md  authentication.md  database.md  deployment.md  getting-started.md
widget/: package-lock.json  package.json  vite.config.js
widget/src/: SiftSearch.svelte  index.js
