[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sift-search"
version = "0.2.0"
description = "Semantic search for static sites"
requires-python = ">=3.9"
dependencies = [
    "onnxruntime>=1.16",
    "tokenizers>=0.15",
    "huggingface-hub>=0.20",
    "numpy>=1.24",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[project.scripts]
sift = "sift_search.cli:main"

[tool.setuptools.packages.find]
include = ["sift_search*"]
